--- a/index.html
+++ b/index.html
@@ -11,20 +11,20 @@
   <body>
     <section class="main">
       <div class="header">
-        <img class="moon" src="img/icon-moon.svg" alt="" />
+        <img class="moon" src="img/icon-moon.svg"/>
         <ul>
           <li><a href="#hist">1.HISTORY</a></li>
           <li><a href="#climb">2.TEAM</li>
         </ul>
       </div>
-      <img class="leftm" src="img/mountain-left.png" alt="" />
-      <img class="rightm" src="img/mountain-right.png" alt="" />
-      <img class="text" src="img/main-text.svg" alt="" />
+      <img class="leftm" src="img/mountain-left.png"/>
+      <img class="rightm" src="img/mountain-right.png"/>
+      <img class="text" src="img/main-text.svg"/>
     </section>
 
     <div class="header2">
       <div class="content1">
-        <img class="h2icon" src="img/icon-header.svg" alt="" />
+        <img class="h2icon" src="img/icon-header.svg" />
         <ul class="nav2">
           <li><a href="#hist">1.HISTORY</a></li>
           <li><a href="#climb">2.TEAM</li>
@@ -45,10 +45,10 @@
       </div>
       <div class="gallary">
         <div class="photos">
-          <div><img src="img/image1.svg" alt="" /></div>
-          <div><img src="img/image2.svg" alt="" /></div>
-          <div><img src="img/image1.svg" alt="" /></div>
-          <div><img src="img/image2.svg" alt="" /></div>
+          <div><img src="img/image1.svg"/></div>
+          <div><img src="img/image2.svg"/></div>
+          <div><img src="img/image1.svg"/></div>
+          <div><img src="img/image2.svg"/></div>
         </div>
         <div class="menu">
           <div class="dots color"></div>
@@ -97,7 +97,7 @@
     </section>
     <div class="footer">
       <footer class="contend">
-        <img class="h2icon" src="img/icon-footer.svg" alt="" />
+        <img class="h2icon" src="img/icon-footer.svg"/>
         <ul class="nav2">
           <li>COPYRIGHT 2016. ALL RIGHTS RESERVED.</li>
         </ul>
